@@ -148,6 +148,9 @@ PidFile "/var/run/vnstat/vnstat.pid"
 # 1 = 64-bit, 0 = 32-bit, -1 = old style logic, -2 = automatic detection
 64bitInterfaceCounters -2
 
+# use SQLite Write-Ahead Logging mode (1 = enabled, 0 = disabled)
+WriteAheadLoggingDatabase 0
+
 
 # vnstati
 ##
